--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                                     <div class="layer1">
                                         <div class="layer2">
                                             <wallet>
-                                                <div id="" class="connect-button">Copy address
+                                                <div id="" class="connect-button" onclick="copyText()" >Copy address
                                                 </div>
                                             </wallet>
-                                            <h2 class="link" id="donate" onclick="">
+                                            <h2 class="link" id="donate" onclick="copyText()">
                                                 <div>Copy address</div>
                                             </h2>
                                             <div class="map">
