--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
     <!--<meta name="viewport" content="width=1280">-->
 
-    <title>Life Restart - I don't want a fucking second of this shitty life.</title>
-    <meta name="description" content="Life Restart - I don't want a fucking second of this shitty life.">
+    <title>Life beyond-Beyond the self and enjoy the life</title>
+    <meta name="description" content="Life beyond-Beyond the self and enjoy the life">
 
     <!-- ogp -->
-    <meta property="og:title" content="Life Restart - I don't want a fucking second of this shitty life." />
+    <meta property="og:title" content="Life beyond-Beyond the self and enjoy the life" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="www.#.com" />
-    <meta property="og:site_name" content="Life Restart - I don't want a fucking second of this shitty life." />
-    <meta property="og:description" content="Life Restart - I don't want a fucking second of this shitty life." />
+    <meta property="og:site_name" content="Life beyond-Beyond the self and enjoy the life" />
+    <meta property="og:description" content="Life beyond-Beyond the self and enjoy the life" />
     <meta property="og:image" content="assets/img/ogp.jpg" />
     <!-- /ogp -->
     <meta name="twitter:card" content="summary">
